--- a/package.json
+++ b/package.json
@@ -9,16 +9,41 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/server": "^11.10.0",
+    "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.10.9",
+    "@mui/material": "^5.10.13",
+    "antd": "^5.0.3",
+    "axios": "^1.2.0",
+    "cookies": "^0.8.0",
+    "cookies-next": "^2.1.1",
+    "dotenv": "^16.0.3",
+    "http-proxy": "^1.18.1",
+    "i18next": "^22.0.6",
+    "js-cookie": "^3.0.1",
     "next": "13.0.1",
+    "next-i18next": "^13.0.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-i18next": "^12.0.0",
+    "styled-components": "^5.3.6",
+    "swr": "^1.3.0",
+    "tailwind.macro": "^0.5.10"
   },
   "devDependencies": {
+    "@types/http-proxy": "^1.17.9",
+    "@types/js-cookie": "^3.0.2",
     "@types/node": "18.11.9",
     "@types/react": "18.0.24",
     "@types/react-dom": "18.0.8",
+    "@types/styled-components": "^5.1.26",
+    "autoprefixer": "^10.4.13",
+    "babel-plugin-styled-components": "^2.0.7",
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.1",
+    "postcss": "^8.4.19",
+    "tailwindcss": "^3.2.4",
     "typescript": "4.8.4"
   }
 }
