--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-i18next": "^12.0.0",
+    "react-multi-carousel": "^2.8.2",
     "styled-components": "^5.3.6",
+    "swiper": "^8.4.5",
     "swr": "^1.3.0",
     "tailwind.macro": "^0.5.10"
   },
